# PAROL6_URDF

./: .gitignore  CONTROL_SYSTEM_README.md  DEBUGGING.md  DEEPSEEK_CONTINUATION.md  DEEPSEEK_HANDOFF.md  DEEPSEEK_XBOX_PROMPT.md  DEVELOPER_GUIDE.md  DUAL_SIMULATOR_GUIDE.md  Dockerfile  Dockerfile.combined  Dockerfile.mobile  Dockerfile.no-kinect  GAZEBO_INSTALL_OPTIONS.md  GAZEBO_NOTE.md  GEARBOX_CONFIG.md  GEARBOX_VELOCITY_FIX.md  GITHUB_CHECKLIST.md  HEADLESS_SUCCESS.md  MOBILE_CONTROL_AI_SUMMARY.md  MOBILE_CONTROL_GUIDE.md  MOBILE_ROS_SUMMARY.md  MOVEIT_SERVO_FIX_SUMMARY.md  MOVEIT_SERVO_SETUP.md  PAROL6_PROJECT_STATUS.md  PREMATURE_STOP_FIX.md  PROJECT_ARCHITECTURE_REPORT.html  PROJECT_ARCHITECTURE_REPORT.md  PROJECT_EXPLANATION.md  PROJECT_REVIEW.md  PROJECT_ROADMAP.md  PURE_VELOCITY_CONTROL_FIX.md  Promte.txt  QUICKREF_XBOX.txt  README.md  SIMPLE_USAGE.md  START_GAZEBO_UPDATED.md  SUCCESS_INSTALLATION_COMPLETE.md  TCP_SETUP_GUIDE.md  ULTIMATE_IMAGE.md  VISION_DEPLOYMENT_GUIDE.md  (+106 more)
PAROL6/: CMakeLists.txt  Dockerfile  package.xml  srdf.text
PAROL6/config/: ros2_controllers.yaml  ros2_controllers_sim.yaml
PAROL6/firmware/: benchmark_firmware.ino  firmware_with_feedback.ino  realtime_servo_blackpill.7z  realtime_servo_teensy_qtimer.7z
PAROL6/firmware/encoder_debug/: encoder_debug.ino
PAROL6/firmware/encoder_test_vfoc/: SERVO42C.h  encoder_test_vfoc.ino
PAROL6/firmware/manual_control/: manual_control.ino
PAROL6/firmware/minimal_test/: minimal_test.ino
PAROL6/firmware/old_firmware/: esp32_feedback_arduino.ino  esp32_motor_control.ino  firmware.ino
PAROL6/firmware/realtime_servo_blackpill/: config.h  control.cpp  control.h  encoder_capture.cpp  encoder_capture.h  homing.cpp  homing.h  motor.cpp  motor.h  platformio.ini  serial_comm.cpp  (+2 more)
PAROL6/launch/: Movit_RViz_launch.py  gazebo.launch.py  ignition.launch.py
PAROL6/urdf/: PAROL6.urdf  PAROL6_gazebo.urdf  PAROL6_ignition.urdf
mobile_control/: package.xml  setup.py
mobile_control/install/: local_setup.sh  setup.sh
mobile_control/log/: latest_build
mobile_control/mobile_control/: mobile_bridge.py
mobile_control/mobile_control.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
parol6_demos/: README.md  package.xml  setup.py
parol6_demos/parol6_demos/: __init__.py  demo_cartesian_path.py
parol6_hardware/: CMakeLists.txt  DAY1_BUILD_TEST_GUIDE.md  DAY2_SERIAL_TX_PLAN.md  HARDWARE_INTERFACE_GUIDE.md  README.md  package.xml  parol6_hardware_plugin.xml  verify_postbuild.sh  verify_prebuild.sh
parol6_hardware/config/: parol6.rviz  parol6_controllers.yaml
parol6_hardware/launch/: real_robot.launch.py  real_robot_tested_single_motor.launch.py
parol6_hardware/src/: parol6_system.cpp
parol6_hardware/urdf/: parol6.ros2_control.xacro  parol6.urdf.xacro
parol6_moveit_config/: CMakeLists.txt  package.xml
parol6_moveit_config/config/: effort_ros2_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  parol6.srdf  parol6_servo.yaml  parol6_servo_fixed.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ros2_controllers_sim.yaml  servo_nuclear.yaml
parol6_moveit_config/launch/: demo.launch.py  demo_tested_single_motor.launch.py  servo.launch.py  servo_control.launch.py  servo_correct.launch.py  servo_final.launch.py  servo_fixed.launch.py  servo_force.launch.py  servo_nuclear.launch.py  servo_professional.launch.py  servo_with_joy.launch.py
parol6_moveit_config/rviz/: moveit.rviz
parol6_moveit_config/scripts/: example_controller.py  xbox_to_servo.py
parol6_vision/: README.md  package.xml  setup.cfg  setup.py
parol6_vision/config/: camera_params.yaml  camera_params_calibrated.yaml  detection_params.yaml  path_params.yaml  qos_override.yaml  vision_debug.rviz
parol6_vision/docs/: ARUCO_EYE_TO_HAND_CALIBRATION.md  CALIBRATION_SETUP_GUIDE.md  CAMERA_CALIBRATION_GUIDE.md  CAPTURE_GUI_GUIDE.md  CAPTURE_IMAGES_NODE.md  CAPTURE_REPLAY_GUIDE.md  COLOR_MODE_NODE.md  CROP_IMAGE_NODE_GUIDE.md  DEPTH_MATCHER_DEBUG.md  DEPTH_MATCHER_GUIDE.md  DEPTH_MATCHER_VERIFICATION.md  EYE_TO_HAND_CALIBRATOR.md  GAZEBO_PATH_EXEC_CHECKLIST.md  GAZEBO_VALIDATION_PLAN.md  GITHUB_TASKS.md  GRADUATION_DOCUMENT.md  MANUAL_LINE_ALIGNER_NODE.md  MANUAL_LINE_NODE.md  MOVEIT_CONTROLLER_DEBUG_CONTEXT.md  MOVEIT_CONTROLLER_GUIDE.md  NoteBook_Structure_v2.md  OMPL_MOVEIT_PLANNER.md  PATH_FLOW_CONTRAST_HANDOFF.md  PATH_GENERATOR_GUIDE.md  PATH_OPTIMIZER_GUIDE.md  PIPELINE_QUALITY_AUDIT.md  PIPELINE_STAGES.md  README.md  RED_LINE_DETECTOR_GUIDE.md  RVIZ_SETUP_GUIDE.md  STABILIZING_PAROL6_VISION_PIPELINE.md  TESTING_GUIDE.md  The v2 of structure.md  The_final_vision_documentation_Structure.md  VISION_PIPELINE_DEVELOPER_GUIDE.md  VISION_PIPELINE_GUI_GUIDE.md  VISION_SYSTEM_USER_GUIDE.md  Yolo_segment_walkthrough.md  implementation_plan.md  implementation_plan_2.md
parol6_vision/launch/: calibration_setup.launch.py  camera_setup.launch.py  capture_and_replay.launch.py  capture_mode.launch.py  live_pipeline.launch.py  red_detector_only.launch.py  test_depth_matcher_bag.launch.py  test_integration.launch.py  test_path_generator_bag.launch.py  vision_moveit.launch.py  vision_pipeline.launch.py
parol6_vision/parol6_vision/: YOLO_SEGMENT_NODE.md  __init__.py  aruco_detector.py  camera_tf_enforcer.py  capture_images_node.py  color_mode.py  crop_image_node.py  depth_matcher.py  dummy_joint_publisher.py  eye_to_hand_calibrator.py  hsv_inspector_node.py  inject_path_node.py  manual_line_aligner_node.py  manual_line_node.py  moveit_controller.py  path_generator.py  path_holder.py  path_optimizer.py  read_image_node.py  red_line_detector.py  vision_trajectory_executor.py  yolo_segment.py
parol6_vision/parol6_vision.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
parol6_vision/scripts/: capture_gui.py  check_sync.py  record_kinect_snapshot.sh  verify_depth_matcher.py  vision_gui.py  vision_pipeline_gui.py
parol6_vision/test/: check_path.py  mock_camera_publisher.py  test_depth_matcher.py  test_detector.py  test_moveit_controller.py  test_path_generator.py
(+1513 files in other folders)
