<package format="3">
  <name>parol6</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for PAROL6. This package contains configuration data,
    3D models, and launch files for the PAROL6 robot.
  </description>

  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>ros_ign_gazebo</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
