<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_control</name>
  <version>0.1.0</version>
  <description>Mobile ROS interface for PAROL6 robot</description>
  <maintainer email="kareem@example.com">Kareem</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
