<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>parol6_demos</name>
    <version>1.0.0</version>
    <description>Demo applications for PAROL6 vision-guided welding system</description>
    <maintainer email="your.email@example.com">Kareem</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>
    <depend>moveit_py</depend>
    <depend>geometry_msgs</depend>
    <depend>trajectory_msgs</depend>
    <depend>std_msgs</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
